Fixed User Login and Signup Swagger annotations to acount for request body instead of params
